--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="40" id="home" class="cur" style="overflow-x: hidden;">
+<body data-spy="scroll" data-target=".navbar" data-offset="40" id="home" class="cur" style="overflow-x: hidden, left-0;">
 
     <!-- <a href="components.html" class="btn btn-primary btn-component" data-spy="affix" data-offset-top="600"><i
             class="ti-shift-left-alt"></i> Components</a> -->
